--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,3 +1,9 @@
+2017-02-23  Roland Clobus <rclobus@rclobus.nl>
+	* Makefile.am, client/Makefile.am, client/gtk/gui.c,
+	client/gtk/offline.c, common/Makefile.am, configure.ac,
+	editor/Makefile.am, server/Makefile.am: Removed dependency on
+	libgnome for displaying the help.
+
 2017-02-21  Roland Clobus <rclobus@rclobus.nl>
 	* client/common/client.c: Removed dead (duplicated) code, fixes a
 	compiler warning (-Wimplicit-fallthrough)
