--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,7 @@
+2017-02-27  Roland Clobus <rclobus@rclobus.nl>
+	* README.subversion, client/Makefile.am, configure.ac:
+	Removed dependency on scrollkeeper (rarian-compat).
+
 2017-02-25  Roland Clobus <rclobus@rclobus.nl>
 	* common/map.c: Fixed potential memory leak in error path.
 	Found by scan-build-6.0
